# X-ROT

./: .gitignore  README.md  meson.build
src/: main.c
src/crypto/: aes.c  sha256.c
src/include/: typedefs.h
src/include/crypto/: aes.h  sha256.h
test/: aes_test.c  sha256_test.c
